# SPA_DRF

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
spa/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
spa/management/commands/: fill_data.py
spa/migrations/: 0001_initial.py  0002_initial.py
spa/tests/: tests_action.py  tests_habit.py  tests_place.py  tests_sevices.py
users/: models.py  permissions.py  serializers.py  services_telegram.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/tests/: tests_telegram.py  tests_user.py
